fix css Collapse add props width

--- a/src/styles/1-helpers/variables.scss
+++ b/src/styles/1-helpers/variables.scss
@@ -1,3 +1,3 @@
-$main-color:  #FF6060;
+$main-color: #ff6060;
 
-$secondary-color: #F6F6F6;
+$secondary-color: #f6f6f6;
