--- a/src/styles/2-components/card.scss
+++ b/src/styles/2-components/card.scss
@@ -14,7 +14,6 @@
         width: 100%;
         padding-top: 100%; /* Hauteur proportionnelle à la largeur */
         overflow: hidden; /* Empêche le contenu de déborder */
-
         &::before {
             content: '';
             position: absolute;
@@ -53,6 +52,10 @@
             z-index: 2;
         }
     }
+}
+
+.cards:hover {
+    transform: scale(1.05);
 }
 
 @media (max-width: 599px) {
