--- a/src/styles/2-components/collapse.scss
+++ b/src/styles/2-components/collapse.scss
@@ -1,9 +1,7 @@
 @include collapse;
 
 #wrapper {
-    width: 80%;
-    margin: auto;
-    padding-top: 60px;
+    padding-top: 5px;
 }
 
 @media (max-width: 599px) {
