--- a/src/styles/3-pages/home.scss
+++ b/src/styles/3-pages/home.scss
@@ -1,9 +1,12 @@
 .home {
     margin: 20px 50px 20px 50px;
+    max-width: 1440px;
+    margin: auto;
     .home-title {
         @include banner;
         background-image: url('../../assets/img-home.png');
         position: relative;
+        font-weight: 500;
         &:before {
             content: '';
             position: absolute;
