--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,7 @@
     padding: 0;
     box-sizing: border-box; // Ceci assure que la taille totale d'un élément comprend les marges, les paddings et les bordures.
 }
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
